# voice-inference-llm-rust

./: Cargo.toml  model_util.py
src/: main.rs  multilingual.rs  pcm_decode.rs  whisper.rs
