[package]
name = "rust_ai"
version = "0.1.0"
edition = "2021"

[dependencies]

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.0", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
hf-hub = { version = "0.3.2", features = ["tokio"] }
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.99"
tokenizers = { version = "0.19.1", default-features = false }
byteorder = "1.4.3"
symphonia= "0.5.4"